<resources>
    <string name="app_name">Coffee Shop</string>
    <string name="facebook_app_id">254322956374748</string>
    <string name="fb_login_protocol_scheme">fb254322956374748</string>
    <string name="action_home">Home</string>
    <string name="action_table">Table</string>
    <string name="action_coffee">Coffee</string>
    <string name="action_profile">Profile</string>
    <string name="action_notification">Notification</string>
    <string name="action_change_cf">Change List Coffee</string>
    <string name="actione_change_table">Change List Table</string>
    <string name="action_setting">Setting</string>
    <string name="action_logout">Logout</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="nav_header_title">This is description about me</string>
    <string name="nav_header_subtitle">quoanh.pqa@mail.com</string>

    <string name="action_settings">Settings</string>
</resources>