<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_profile"
            android:icon="@drawable/baseline_account_circle_white_24"
            android:title="@string/action_profile" />

        <item
            android:id="@+id/action_change_cf"
            android:icon="@drawable/round_deck_white_24"
            android:title="@string/action_change_cf"
             />

        <item
            android:id="@+id/action_change_table"

            android:icon="@drawable/baseline_local_cafe_white_24"
            android:title="@string/actione_change_table"/>

        <item
            android:id="@+id/action_setting"
            android:icon="@drawable/baseline_settings_white_24"
            android:title="@string/action_setting" />

        <item
            android:id="@+id/action_logout"
            android:icon="@drawable/baseline_logout_white_24"
            android:title="@string/action_logout" />

    </group>

</menu>